<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activities.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:orientation="horizontal">

            <ImageView
                android:background="@drawable/back"
                android:id="@+id/mPoster"
                android:layout_weight="1"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_280sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="@dimen/_202sdp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@drawable/back"
                android:orientation="vertical"
                android:padding="@dimen/_7sdp"
                android:paddingStart="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:src="@drawable/ic_unfav" />

                <TextView
                    android:id="@+id/mDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/n_a"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/n_a"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/movie_title"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/overview"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mPlot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:textSize="17sp"
                android:text="@string/bla"
                android:textColor="#ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/trailers"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="@dimen/_4sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/reviews"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_list_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
